--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:contentDescription="@string/logo" />
 
     <TextView
+        style="@style/Text.Thin.Big"
         android:layout_below="@id/main_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
