--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,28 @@
         <item name="colorAccent">@color/accent</item>
     </style>
 
+    <!-- Text Styles  -->
+    <style name="Text" parent="@android:style/TextAppearance.Holo.Medium">
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textSize">@dimen/text_base</item>
+    </style>
+
+    <style name="TextGrey" parent="Text">
+        <item name="android:textColor">@color/secondary_text</item>
+    </style>
+
+    <style name="Text.Medium" parent="Text">
+        <item name="android:textSize">@dimen/text_medium</item>
+    </style>
+
+    <style name="Text.Thin" parent="Text.Medium">
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textSize">@dimen/text_medium</item>
+    </style>
+
+    <style name="Text.Thin.Big" parent="Text.Thin">
+        <item name="android:textSize">@dimen/text_big</item>
+    </style>
+
+
 </resources>
