--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:contentDescription="@string/logo" />
 
     <TextView
+        android:id="@+id/main_text"
         style="@style/Text.Thin.Big"
         android:layout_below="@id/main_img"
         android:layout_width="match_parent"
@@ -22,4 +23,32 @@
         android:gravity="center"
         android:layout_margin="8dp"
         android:text="@string/weatherapp_title" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_below="@id/main_text"
+        android:layout_width="wrap_content"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp">
+
+        <ProgressBar
+            android:layout_margin="4dp"
+            android:indeterminate="true"
+            android:layout_width="32dp"
+            android:layout_height="32dp" />
+        <TextView
+            style="@style/Text.Thin"
+            android:text="main_loading"
+            android:layout_margin="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_margin="4dp"
+            style="@style/Text.Thin"
+            android:text="0/100"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </RelativeLayout>
