--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="weather.lyra.com.weatherapp.MainActivity">
+    tools:context="weather.lyra.com.weatherapp.MainActivity"
+    android:animateLayoutChanges="true">
 
     <ImageView
         android:id="@+id/main_img"
@@ -25,6 +26,8 @@
         android:text="@string/weatherapp_title" />
 
     <LinearLayout
+        android:id="@+id/loader"
+        android:visibility="visible"
         android:orientation="horizontal"
         android:layout_below="@id/main_text"
         android:layout_width="wrap_content"
@@ -45,6 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/loader_progress_text"
             android:layout_margin="4dp"
             style="@style/Text.Thin"
             android:text="0/100"
