--- a/app/src/main/res/layout/activity_weather_display.xml
+++ b/app/src/main/res/layout/activity_weather_display.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="weather.lyra.com.weatherapp.weather.WeatherDisplayActivity">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/Toolbar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:title="@string/weatherTitle"/>
+    </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
         android:id="@+id/weatherContainer"
@@ -11,3 +28,6 @@
         android:layout_height="match_parent" />
 
 </LinearLayout>
+
+
+
